src/test/ui/consts/const_let_assign3.stderr
error[E0658]: mutable references are not allowed in constant functions
  --> $DIR/const_let_assign3.rs:8:18
   |
LL |     const fn foo(&mut self, x: u32) {
   |                  ^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0764]: mutable references are not allowed in constants
  --> $DIR/const_let_assign3.rs:16:5
   |
LL |     s.foo(3);
   |     ^ `&mut` is only allowed in `const fn`

error[E0764]: mutable references are not allowed in constants
  --> $DIR/const_let_assign3.rs:22:13
   |
LL |     let y = &mut x;
   |             ^^^^^^ `&mut` is only allowed in `const fn`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0658, E0764.
For more information about an error, try `rustc --explain E0658`.
